--- a/css/style.css
+++ b/css/style.css
@@ -3,27 +3,46 @@
 }
 
 body {
-  background-color: rgba(0, 0, 0, 0.554);
+  margin: 0;
+  padding: 0;
+}
+
+.header {
+  background-color: #f1f1f1;
+  padding: 20px;
+  text-align: center;
 }
 
 h1 {
-  font-size: x-large;
   text-align: center;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
-ul {
-  text-align: center;
-  list-style-position: inside;
-  list-style-type: none;
+.topnav {
+  overflow: hidden;
+  background-color: #333;
 }
 
-a:link {
-  color: white;
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* a:link {
+  color: blue;
   text-decoration: none;
 }
 
 a:visited {
   color: white;
   text-decoration: none;
-}
+} */
